sistemo linea a destra

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </div>
 
 
-<div class="row modal-container">
+<div class="row modal-container col-md-12">
 
     <!-- Button trigger modal -->
     <div class="modal-menu col-md-2 giallo">
@@ -121,7 +121,7 @@
     <div class="col-newLine"></div>
 
     <div class="modal-menu col-md-2 verde">
-        <p>FOTO E VIDEO</p>
+        <p><span>&nbsp; &nbsp;&nbsp; &nbsp;</span> FOTO E VIDEO <span>&nbsp; &nbsp;&nbsp; &nbsp;</span></p>
         <img src="img/elettrodomestici.svg" alt="Elettrodomestici">
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#foto_e_video">
             Cerca
@@ -172,7 +172,7 @@
     <div class="col-newLineMiddle"></div>
 
     <div class="modal-menu col-md-2 rosso">
-        <p>ABBIGLIAMENTO</p>
+        <p><span>&nbsp; &nbsp;</span> ABBIGLIAMENTO <span>&nbsp; &nbsp;</span></p>
         <img src="img/elettrodomestici.svg" alt="Elettrodomestici">
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#abbigliamento">
             Cerca
@@ -223,7 +223,7 @@
     <div class="col-newLine"></div>
 
     <div class="modal-menu col-md-2 blu">
-        <p>HOBBY</p>
+        <p><span>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</span> HOBBY <span>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</span></p>
         <img src="img/elettrodomestici.svg" alt="Elettrodomestici">
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#hobby">
             Cerca
