--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 
     <div class="col-newLine"></div>
 
+    <!-- Button trigger modal -->
     <div class="modal-menu col-md-2 verde">
         <p><span>&nbsp; &nbsp;&nbsp; &nbsp;</span> FOTO E VIDEO <span>&nbsp; &nbsp;&nbsp; &nbsp;</span></p>
         <img src="img/elettrodomestici.svg" alt="Elettrodomestici">
@@ -171,6 +172,7 @@
 
     <div class="col-newLineMiddle"></div>
 
+    <!-- Button trigger modal -->
     <div class="modal-menu col-md-2 rosso">
         <p><span>&nbsp; &nbsp;</span> ABBIGLIAMENTO <span>&nbsp; &nbsp;</span></p>
         <img src="img/elettrodomestici.svg" alt="Elettrodomestici">
@@ -222,8 +224,10 @@
 
     <div class="col-newLine"></div>
 
+    <!-- Button trigger modal -->
     <div class="modal-menu col-md-2 blu">
-        <p><span>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</span> HOBBY <span>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</span></p>
+        <p><span>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</span> HOBBY <span>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</span>
+        </p>
         <img src="img/elettrodomestici.svg" alt="Elettrodomestici">
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#hobby">
             Cerca
@@ -274,8 +278,6 @@
 </div>
 
 
-
-
 <link rel="stylesheet" href="css/owl.carousel.min.css">
 <link rel="stylesheet" href="css/owl.theme.default.css">
 <div class="bbb_viewed">
@@ -286,15 +288,19 @@
                     <div class="bbb_viewed_title_container">
                         <h3 class="bbb_viewed_title">Best selling products</h3>
                         <div class="bbb_viewed_nav_container">
-                            <div class="bbb_viewed_nav bbb_viewed_prev"><img src="img/chevron-left-solid.svg"></div>
-                            <div class="bbb_viewed_nav bbb_viewed_next"><img src="img/chevron-right-solid.svg"></div>
+                            <div class="bbb_viewed_nav bbb_viewed_prev"><img src="img/chevron-left-solid.svg"
+                                                                             alt="sinistra"></div>
+                            <div class="bbb_viewed_nav bbb_viewed_next"><img src="img/chevron-right-solid.svg"
+                                                                             alt="destra"></div>
                         </div>
                     </div>
                     <div class="bbb_viewed_slider_container">
                         <div class="owl-carousel owl-theme bbb_viewed_slider">
                             <div class="owl-item">
                                 <div class="bbb_viewed_item discount d-flex flex-column align-items-center justify-content-center text-center">
-                                    <div class="bbb_viewed_image"><img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924153/alcatel-smartphones-einsteiger-mittelklasse-neu-3m.jpg" alt=""></div>
+                                    <div class="bbb_viewed_image"><img
+                                            src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924153/alcatel-smartphones-einsteiger-mittelklasse-neu-3m.jpg"
+                                            alt=""></div>
                                     <div class="bbb_viewed_content text-center">
                                         <div class="bbb_viewed_price">₹12225<span>₹13300</span></div>
                                         <div class="bbb_viewed_name"><a href="#">Alkatel Phone</a></div>
@@ -307,7 +313,9 @@
                             </div>
                             <div class="owl-item">
                                 <div class="bbb_viewed_item d-flex flex-column align-items-center justify-content-center text-center">
-                                    <div class="bbb_viewed_image"><img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924221/51_be7qfhil.jpg" alt=""></div>
+                                    <div class="bbb_viewed_image"><img
+                                            src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924221/51_be7qfhil.jpg"
+                                            alt=""></div>
                                     <div class="bbb_viewed_content text-center">
                                         <div class="bbb_viewed_price">₹30079</div>
                                         <div class="bbb_viewed_name"><a href="#">Samsung LED</a></div>
@@ -320,7 +328,9 @@
                             </div>
                             <div class="owl-item">
                                 <div class="bbb_viewed_item d-flex flex-column align-items-center justify-content-center text-center">
-                                    <div class="bbb_viewed_image"><img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924241/8fbb415a2ab2a4de55bb0c8da73c4172--ps.jpg" alt=""></div>
+                                    <div class="bbb_viewed_image"><img
+                                            src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924241/8fbb415a2ab2a4de55bb0c8da73c4172--ps.jpg"
+                                            alt=""></div>
                                     <div class="bbb_viewed_content text-center">
                                         <div class="bbb_viewed_price">₹22250</div>
                                         <div class="bbb_viewed_name"><a href="#">Samsung Mobile</a></div>
@@ -333,7 +343,9 @@
                             </div>
                             <div class="owl-item">
                                 <div class="bbb_viewed_item is_new d-flex flex-column align-items-center justify-content-center text-center">
-                                    <div class="bbb_viewed_image"><img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924275/images.jpg" alt=""></div>
+                                    <div class="bbb_viewed_image"><img
+                                            src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924275/images.jpg"
+                                            alt=""></div>
                                     <div class="bbb_viewed_content text-center">
                                         <div class="bbb_viewed_price">₹1379</div>
                                         <div class="bbb_viewed_name"><a href="#">Huawei Power</a></div>
@@ -346,7 +358,9 @@
                             </div>
                             <div class="owl-item">
                                 <div class="bbb_viewed_item discount d-flex flex-column align-items-center justify-content-center text-center">
-                                    <div class="bbb_viewed_image"><img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924361/21HmjI5eVcL.jpg" alt=""></div>
+                                    <div class="bbb_viewed_image"><img
+                                            src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924361/21HmjI5eVcL.jpg"
+                                            alt=""></div>
                                     <div class="bbb_viewed_content text-center">
                                         <div class="bbb_viewed_price">₹225<span>₹300</span></div>
                                         <div class="bbb_viewed_name"><a href="#">Sony Power</a></div>
@@ -359,7 +373,9 @@
                             </div>
                             <div class="owl-item">
                                 <div class="bbb_viewed_item d-flex flex-column align-items-center justify-content-center text-center">
-                                    <div class="bbb_viewed_image"><img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924241/8fbb415a2ab2a4de55bb0c8da73c4172--ps.jpg" alt=""></div>
+                                    <div class="bbb_viewed_image"><img
+                                            src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924241/8fbb415a2ab2a4de55bb0c8da73c4172--ps.jpg"
+                                            alt=""></div>
                                     <div class="bbb_viewed_content text-center">
                                         <div class="bbb_viewed_price">₹13275</div>
                                         <div class="bbb_viewed_name"><a href="#">Speedlink Mobile</a></div>
@@ -378,18 +394,95 @@
     </div>
 </div>
 
+<!-- Footer -->
+<footer class="page-footer font-small blue pt-4">
+
+    <!-- Footer Links -->
+    <div class="container-fluid text-center text-md-left">
+
+        <!-- Grid row -->
+        <div class="row">
+
+            <!-- Grid column -->
+            <div class="col-md-6 mt-md-0 mt-3">
+
+                <!-- Content -->
+                <h5 class="text-uppercase">Footer Content</h5>
+                <p>Here you can use rows and columns to organize your footer content.</p>
+
+            </div>
+            <!-- Grid column -->
+
+            <hr class="clearfix w-100 d-md-none pb-3">
+
+            <!-- Grid column -->
+            <div class="col-md-3 mb-md-0 mb-3">
+
+                <!-- Links -->
+                <h5 class="text-uppercase">Links</h5>
+
+                <ul class="list-unstyled">
+                    <li>
+                        <a class="link-footer" href="#">Link 1</a>
+                    </li>
+                    <li>
+                        <a class="link-footer" href="#">Link 2</a>
+                    </li>
+                    <li>
+                        <a class="link-footer" href="#">Link 3</a>
+                    </li>
+                    <li>
+                        <a class="link-footer" href="#">Link 4</a>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-3 mb-md-0 mb-3">
+
+                <!-- Links -->
+                <h5 class="text-uppercase">Links</h5>
+
+                <ul class="list-unstyled">
+                    <li>
+                        <a class="link-footer" href="#">Link 1</a>
+                    </li>
+                    <li>
+                        <a class="link-footer" href="#">Link 2</a>
+                    </li>
+                    <li>
+                        <a class="link-footer" href="#">Link 3</a>
+                    </li>
+                    <li>
+                        <a class="link-footer" href="#">Link 4</a>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+    </div>
+    <!-- Footer Links -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a class="link-footer" href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+    </div>
+    <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+
 <script src="js/jquery-3.3.1.slim.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/bootstrap.bundle.js"></script>
-
 <script src="js/prodotti.js"></script>
 <script src="js/regioneProvincia.js"></script>
 <script src="js/owl.carousel.js"></script>
-
-
-
-
-
-
 </body>
 </html>
