--- a/index.html
+++ b/index.html
@@ -396,30 +396,22 @@
 
 <!-- Footer -->
 <footer class="page-footer font-small blue pt-4">
-
     <!-- Footer Links -->
     <div class="container-fluid text-center text-md-left">
-
         <!-- Grid row -->
         <div class="row">
-
             <!-- Grid column -->
-            <div class="col-md-6 mt-md-0 mt-3">
-
+            <div class="col-md-6 mt-md-0 mt-3 footer-content">
                 <!-- Content -->
-                <h5 class="text-uppercase">Footer Content</h5>
+                <h5 class="text-uppercase">Come vendere</h5>
                 <p>Here you can use rows and columns to organize your footer content.</p>
-
             </div>
             <!-- Grid column -->
-
             <hr class="clearfix w-100 d-md-none pb-3">
-
             <!-- Grid column -->
             <div class="col-md-3 mb-md-0 mb-3">
-
                 <!-- Links -->
-                <h5 class="text-uppercase">Links</h5>
+                <h5 class="text-uppercase">Chi siamo</h5>
 
                 <ul class="list-unstyled">
                     <li>
@@ -435,15 +427,12 @@
                         <a class="link-footer" href="#">Link 4</a>
                     </li>
                 </ul>
-
             </div>
             <!-- Grid column -->
-
             <!-- Grid column -->
             <div class="col-md-3 mb-md-0 mb-3">
-
                 <!-- Links -->
-                <h5 class="text-uppercase">Links</h5>
+                <h5 class="text-uppercase">Cookies</h5>
 
                 <ul class="list-unstyled">
                     <li>
@@ -459,22 +448,17 @@
                         <a class="link-footer" href="#">Link 4</a>
                     </li>
                 </ul>
-
             </div>
             <!-- Grid column -->
-
         </div>
         <!-- Grid row -->
-
     </div>
     <!-- Footer Links -->
-
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a class="link-footer" href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+    <div class="footer-copyright text-center py-3">© 2020 Copyright | Designed by: Leonardo Albani e Filippo Uslenghi |
+        <a class="link-footer"> All rights reserved</a>
     </div>
     <!-- Copyright -->
-
 </footer>
 <!-- Footer -->
 
