--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             <!-- Grid column -->
             <div class="col-md-6 mt-md-0 mt-3 footer-content">
                 <!-- Content -->
-                <h5 class="text-uppercase">Come vendere</h5>
+                <h5 class="text-uppercase"><a href="http://letmegooglethat.com/?q=come+vendere+su+un+ecommerce" class="link-footer">Come vendere</a></h5>
                 <p>Here you can use rows and columns to organize your footer content.</p>
             </div>
             <!-- Grid column -->
