aggiunto contenuto footbar

--- a/index.html
+++ b/index.html
@@ -401,10 +401,13 @@
         <!-- Grid row -->
         <div class="row">
             <!-- Grid column -->
-            <div class="col-md-6 mt-md-0 mt-3 footer-content">
+            <div class="col-md-5 mt-md-0 mt-3 footer-content">
                 <!-- Content -->
-                <h5 class="text-uppercase"><a href="http://letmegooglethat.com/?q=come+vendere+su+un+ecommerce" class="link-footer">Come vendere</a></h5>
-                <p>Here you can use rows and columns to organize your footer content.</p>
+                <h5 class="text-uppercase">Come vendere</h5>
+                <p>Per vendere un prodotto è necessario essere iscritti alla piattaforma.
+                <br>Dopo aver effettuato il login, tramite il bottone posizionato nella <a class="link-footer" href="index.html">home</a>.
+                <br>Lì verranno chiesti i dati e fornite le spiegazioni necessarie</p>
+
             </div>
             <!-- Grid column -->
             <hr class="clearfix w-100 d-md-none pb-3">
@@ -430,24 +433,11 @@
             </div>
             <!-- Grid column -->
             <!-- Grid column -->
-            <div class="col-md-3 mb-md-0 mb-3">
+            <div class="col-md-4 mb-md-0 mb-3">
                 <!-- Links -->
                 <h5 class="text-uppercase">Cookies</h5>
 
-                <ul class="list-unstyled">
-                    <li>
-                        <a class="link-footer" href="#">Link 1</a>
-                    </li>
-                    <li>
-                        <a class="link-footer" href="#">Link 2</a>
-                    </li>
-                    <li>
-                        <a class="link-footer" href="#">Link 3</a>
-                    </li>
-                    <li>
-                        <a class="link-footer" href="#">Link 4</a>
-                    </li>
-                </ul>
+                <p>Questo sito fa uso di cookie per migliorare l’esperienza di navigazione degli utenti. Utilizziamo solo cookie tecnici. Proseguendo nella navigazione si accetta l’uso dei cookie.</p>
             </div>
             <!-- Grid column -->
         </div>
