--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="col">
                 <div class="bbb_main_container">
                     <div class="bbb_viewed_title_container">
-                        <h3 class="bbb_viewed_title">Best selling products</h3>
+                        <h3 class="bbb_viewed_title">Annunci più <span>osservati</span></h3>
                         <div class="bbb_viewed_nav_container">
                             <div class="bbb_viewed_nav bbb_viewed_prev"><img src="img/chevron-left-solid.svg"
                                                                              alt="sinistra"></div>
@@ -406,7 +406,7 @@
                 <h5 class="text-uppercase">Come vendere</h5>
                 <p>Per vendere un prodotto è necessario essere iscritti alla piattaforma.
                 <br>Dopo aver effettuato il login, tramite il bottone posizionato nella <a class="link-footer" href="index.html">home</a>.
-                <br>Lì verranno chiesti i dati e fornite le spiegazioni necessarie</p>
+                <br>Lì verranno chiesti i dati e fornite le spiegazioni necessarie.</p>
 
             </div>
             <!-- Grid column -->
@@ -418,16 +418,10 @@
 
                 <ul class="list-unstyled">
                     <li>
-                        <a class="link-footer" href="#">Link 1</a>
+                        <a class="link-footer" href="https://github.com/lynerist">Leonardo Albani</a> | leonardo.albani@studenti.unimi.it
                     </li>
                     <li>
-                        <a class="link-footer" href="#">Link 2</a>
-                    </li>
-                    <li>
-                        <a class="link-footer" href="#">Link 3</a>
-                    </li>
-                    <li>
-                        <a class="link-footer" href="#">Link 4</a>
+                        <a class="link-footer" href="https://github.com/FilippoUslenghi">Filippo Uslenghi</a> | filippo.uslenghi@studenti.unimi.it
                     </li>
                 </ul>
             </div>
