--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
                             <div class="owl-item">
                                 <div class="bbb_viewed_item d-flex flex-column align-items-center justify-content-center text-center">
                                     <div class="bbb_viewed_image"><img
-                                            src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924221/51_be7qfhil.jpg"
+                                            src="img/filippo.png"
                                             alt=""></div>
                                     <div class="bbb_viewed_content text-center">
-                                        <div class="bbb_viewed_price">₹30079</div>
-                                        <div class="bbb_viewed_name"><a href="#">Samsung LED</a></div>
+                                        <div class="bbb_viewed_price">€10000</div>
+                                        <div class="bbb_viewed_name"><a href="#">Quadro cubista</a></div>
                                     </div>
                                     <ul class="item_marks">
                                         <li class="item_mark item_discount">-25%</li>
