--- a/index.html
+++ b/index.html
@@ -414,14 +414,14 @@
             <!-- Grid column -->
             <div class="col-md-3 mb-md-0 mb-3">
                 <!-- Links -->
-                <h5 class="text-uppercase">Chi siamo</h5>
+                <h5 class="text-uppercase">Chi siamo | Contattaci</h5>
 
                 <ul class="list-unstyled">
                     <li>
-                        <a class="link-footer" href="https://github.com/lynerist">Leonardo Albani</a> | leonardo.albani@studenti.unimi.it
+                        <a class="link-footer" href="https://github.com/lynerist">Leonardo Albani</a> | <a class="link-footer" href="mailto:leonardo.albani@studenti.unimi.it">leonardo.albani@studenti.unimi.it</a>
                     </li>
                     <li>
-                        <a class="link-footer" href="https://github.com/FilippoUslenghi">Filippo Uslenghi</a> | filippo.uslenghi@studenti.unimi.it
+                        <a class="link-footer" href="https://github.com/FilippoUslenghi">Filippo Uslenghi</a> | <a class="link-footer" href="mailto:filippo.uslenghi@studenti.unimi.it">filippo.uslenghi@studenti.unimi.it</a>
                     </li>
                 </ul>
             </div>
