--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             <!-- Grid column -->
             <hr class="clearfix w-100 d-md-none pb-3">
             <!-- Grid column -->
-            <div class="col-md-3 mb-md-0 mb-3">
+            <div class="col-md-3 mb-md-0 mb-3 footer-left">
                 <!-- Links -->
                 <h5 class="text-uppercase">Chi siamo | Contattaci</h5>
 
