--- a/profile.html
+++ b/profile.html
@@ -59,7 +59,7 @@
 </nav>
 
 
-<footer class="page-footer font-small blue pt-4">
+<footer class="page-footer font-small footer-color pt-4">
     <!-- Footer Links -->
     <div class="container-fluid text-center text-md-left">
         <!-- Grid row -->
