--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
         <form class="form-inline my-2 my-lg-0 nav-form">
             <label>
-                <select class="form-control" name="regione" id="regione">
+                <select class="form-control white-inputs" name="regione" id="regione">
                     <option value="0">Tutta Italia</option>
                     <option value="1">Lombardia</option>
                     <option value="2">Sardegna</option>
                 </select>
             </label>
             <label>
-                <select class="form-control" name="provincia" id="provincia">
+                <select class="form-control white-inputs" name="provincia" id="provincia">
                     <option value="0">Ogni provincia</option>
                     <option value="1">Ogni provincia</option>
                     <option value="1">Lecco</option>
@@ -37,7 +37,7 @@
                 </select>
             </label>
 
-            <input class="form-control mr-sm-2" type="search" placeholder="Cerca" aria-label="Search">
+            <input class="form-control mr-sm-2 white-inputs" type="search" placeholder="Cerca" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cerca</button>
         </form>
 
@@ -284,7 +284,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <div class="bbb_main_container">
+                <div class="bbb_main_container drop-shadow">
                     <div class="bbb_viewed_title_container">
                         <h3 class="bbb_viewed_title">Annunci più <span>osservati</span></h3>
                         <div class="bbb_viewed_nav_container">
@@ -395,7 +395,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="page-footer font-small footer-color pt-4">
+<footer class="page-footer font-small blue pt-4">
     <!-- Footer Links -->
     <div class="container-fluid text-center text-md-left">
         <!-- Grid row -->
