--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <title>bee-market</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
-    <link rel="stylesheet" href="css/bootstrap-reboot.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/prodotti.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/products.css">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -36,7 +37,7 @@
                     <option value="2">Olbia</option>
                 </select>
             </label>
-
+            <div class="nav-newline"></div>
             <input class="form-control mr-sm-2 white-inputs" type="search" placeholder="Cerca" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cerca</button>
         </form>
