--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </select>
             </label>
             <div class="nav-newline"></div>
-            <input class="form-control mr-sm-2 white-inputs" type="search" placeholder="Cerca" aria-label="Search">
+            <input class="form-control mr-sm-2 white-inputs nav-search" type="search" placeholder="Cerca" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cerca</button>
         </form>
 
