--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- Button trigger modal -->
     <div class="modal-menu col-md-2 verde">
         <p><span>&nbsp; &nbsp;&nbsp; &nbsp;</span> FOTO E VIDEO <span>&nbsp; &nbsp;&nbsp; &nbsp;</span></p>
-        <img src="img/elettrodomestici.svg" alt="Elettrodomestici">
+        <img src="img/camera.svg" alt="Foto e video">
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#foto_e_video">
             Cerca
             <span>in foto e video</span>
@@ -176,7 +176,7 @@
     <!-- Button trigger modal -->
     <div class="modal-menu col-md-2 rosso">
         <p><span>&nbsp; &nbsp;</span> ABBIGLIAMENTO <span>&nbsp; &nbsp;</span></p>
-        <img src="img/elettrodomestici.svg" alt="Elettrodomestici">
+        <img src="img/clothes.svg" alt="Abbigliamento">
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#abbigliamento">
             Cerca
             <span>in abbigliamento</span>
@@ -229,7 +229,7 @@
     <div class="modal-menu col-md-2 blu">
         <p><span>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</span> HOBBY <span>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</span>
         </p>
-        <img src="img/elettrodomestici.svg" alt="Elettrodomestici">
+        <img src="img/hobby.svg" alt="Hobby">
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#hobby">
             Cerca
             <span>in hobby</span>
