--- a/profile.html
+++ b/profile.html
@@ -65,9 +65,9 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="profile-img">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog" alt=""/>
+                    <img src="img/ceciglia_rotta.jpg" alt=""/>
                     <div class="file btn btn-lg btn-primary">
-                        Change Photo
+                        Cambia foto
                         <input type="file" name="file"/>
                     </div>
                 </div>
@@ -75,39 +75,36 @@
             <div class="col-md-6">
                 <div class="profile-head">
                     <h5>
-                        Kshiti Ghelani
+                        Rossi Cecilia
                     </h5>
+                    <div>
+                        <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Modifica"/>
+                    </div>
                     <h6>
-                        Web Developer and Designer
+                        Acquirente e Babao
                     </h6>
-                    <p class="proile-rating">RANKINGS : <span>8/10</span></p>
+                    <p class="profile-rating">PUNTEGGIO ACQUIRENTE: <span>4/5</span></p>
+                    <p class="profile-rating">PUNTEGGIO VENDITORE: <span>4/5</span></p>
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
+                            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Annunci acquistati</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Timeline</a>
+                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Annunci venduti</a>
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="col-md-2">
-                <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile"/>
             </div>
         </div>
         <div class="row">
             <div class="col-md-4">
                 <div class="profile-work">
-                    <p>WORK LINK</p>
-                    <a href="">Website Link</a><br/>
-                    <a href="">Bootsnipp Profile</a><br/>
-                    <a href="">Bootply Profile</a>
-                    <p>SKILLS</p>
-                    <a href="">Web Designer</a><br/>
-                    <a href="">Web Developer</a><br/>
-                    <a href="">WordPress</a><br/>
-                    <a href="">WooCommerce</a><br/>
-                    <a href="">PHP, .Net</a><br/>
+                    <p class="profile-title">DATI PERSONALI</p>
+                    <p>ceciglia.rossi@babao.opla</p>
+                    <p>Montisola</p>
+                    <p class="profile-title">STATISTICHE</p>
+                    <p>Annunci venduti: 20</p>
+                    <p>Annunci acquistati: 11</p>
                 </div>
             </div>
             <div class="col-md-8">
@@ -202,6 +199,16 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="col-md-4 hidden-block">
+                <div class="profile-work">
+                    <p class="profile-title">DATI PERSONALI</p>
+                    <p>ceciglia.rossi@babao.opla</p>
+                    <p>Montisola</p>
+                    <p class="profile-title">STATISTICHE</p>
+                    <p>Annunci venduti: 20</p>
+                    <p>Annunci acquistati: 11</p>
                 </div>
             </div>
         </div>
