fixate tante cose

--- a/profile.html
+++ b/profile.html
@@ -98,7 +98,7 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <div class="profile-work">
+                <div class="profile-work profile-work-hiding">
                     <p class="profile-title">DATI PERSONALI</p>
                     <p>ceciglia.rossi@babao.opla</p>
                     <p>Montisola</p>
