--- a/index.html
+++ b/index.html
@@ -345,11 +345,11 @@
                             <div class="owl-item">
                                 <div class="bbb_viewed_item is_new d-flex flex-column align-items-center justify-content-center text-center">
                                     <div class="bbb_viewed_image"><img
-                                            src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924275/images.jpg"
+                                            src="img/jona.jpeg"
                                             alt=""></div>
                                     <div class="bbb_viewed_content text-center">
-                                        <div class="bbb_viewed_price">₹1379</div>
-                                        <div class="bbb_viewed_name"><a href="#">Huawei Power</a></div>
+                                        <div class="bbb_viewed_price">£1379</div>
+                                        <div class="bbb_viewed_name"><a href="#">OPLA</a></div>
                                     </div>
                                     <ul class="item_marks">
                                         <li class="item_mark item_discount">-25%</li>
@@ -360,14 +360,14 @@
                             <div class="owl-item">
                                 <div class="bbb_viewed_item discount d-flex flex-column align-items-center justify-content-center text-center">
                                     <div class="bbb_viewed_image"><img
-                                            src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924361/21HmjI5eVcL.jpg"
+                                            src="img/cormorano.jpeg"
                                             alt=""></div>
                                     <div class="bbb_viewed_content text-center">
-                                        <div class="bbb_viewed_price">₹225<span>₹300</span></div>
-                                        <div class="bbb_viewed_name"><a href="#">Sony Power</a></div>
+                                        <div class="bbb_viewed_price">$225<span>$300</span></div>
+                                        <div class="bbb_viewed_name"><a href="#">Cormorano</a></div>
                                     </div>
                                     <ul class="item_marks">
-                                        <li class="item_mark item_discount">-25%</li>
+                                        <li class="item_mark item_discount">ghesboro</li>
                                         <li class="item_mark item_new">new</li>
                                     </ul>
                                 </div>
@@ -375,14 +375,14 @@
                             <div class="owl-item">
                                 <div class="bbb_viewed_item d-flex flex-column align-items-center justify-content-center text-center">
                                     <div class="bbb_viewed_image"><img
-                                            src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924241/8fbb415a2ab2a4de55bb0c8da73c4172--ps.jpg"
+                                            src="img/lidl.jpeg"
                                             alt=""></div>
                                     <div class="bbb_viewed_content text-center">
-                                        <div class="bbb_viewed_price">₹13275</div>
-                                        <div class="bbb_viewed_name"><a href="#">Speedlink Mobile</a></div>
+                                        <div class="bbb_viewed_price">€13275</div>
+                                        <div class="bbb_viewed_name"><a href="#">Chitarra marchio famoso</a></div>
                                     </div>
                                     <ul class="item_marks">
-                                        <li class="item_mark item_discount">-25%</li>
+                                        <li class="item_mark item_discount">+25%</li>
                                         <li class="item_mark item_new">new</li>
                                     </ul>
                                 </div>
