--- a/index.html
+++ b/index.html
@@ -455,3 +455,29 @@
 <script src="js/owl.carousel.js"></script>
 </body>
 </html>
+
+<!-- <div class="mb-2"><b>Change Password</b></div>
+<div class="row">
+    <div class="col">
+        <div class="form-group">
+            <label>Current Password</label>
+            <input class="form-control" type="password" placeholder="••••••">
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col">
+        <div class="form-group">
+            <label>New Password</label>
+            <input class="form-control" type="password" placeholder="••••••">
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col">
+        <div class="form-group">
+            <label>Confirm <span class="d-none d-xl-inline">Password</span></label>
+            <input class="form-control" type="password" placeholder="••••••"></div>
+    </div>
+</div>
+</div> -->
