--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </label>
             <div class="nav-newline"></div>
             <input class="form-control mr-sm-2 white-inputs nav-search" type="search" placeholder="Cerca" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cerca</button>
+            <button class="btn btn-outline-success btn-custom my-2 my-sm-0" type="submit">Cerca</button>
         </form>
 
         <ul class="navbar-nav mr-auto">
@@ -112,7 +112,7 @@
                                 <option value="2">Olbia</option>
                             </select>
                         </label>
-                        <button class="btn btn-outline-success my-2 my-sm-0 popup giallo" type="submit">Cerca</button>
+                        <button class="btn btn-outline-success btn-custom my-2 my-sm-0 popup giallo" type="submit">Cerca</button>
                     </form>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                                 <option value="2">Olbia</option>
                             </select>
                         </label>
-                        <button class="btn btn-outline-success my-2 my-sm-0 popup verde" type="submit">Cerca</button>
+                        <button class="btn btn-outline-success btn-custom my-2 my-sm-0 popup verde" type="submit">Cerca</button>
                     </form>
                 </div>
             </div>
@@ -216,7 +216,7 @@
                                 <option value="2">Olbia</option>
                             </select>
                         </label>
-                        <button class="btn btn-outline-success my-2 my-sm-0 popup rosso" type="submit">Cerca</button>
+                        <button class="btn btn-outline-success btn-custom my-2 my-sm-0 popup rosso" type="submit">Cerca</button>
                     </form>
                 </div>
             </div>
@@ -269,7 +269,7 @@
                                 <option value="2">Olbia</option>
                             </select>
                         </label>
-                        <button class="btn btn-outline-success my-2 my-sm-0 popup blu" type="submit">Cerca</button>
+                        <button class="btn btn-outline-success btn-custom my-2 my-sm-0 popup blu" type="submit">Cerca</button>
                     </form>
                 </div>
             </div>
@@ -455,29 +455,3 @@
 <script src="js/owl.carousel.js"></script>
 </body>
 </html>
-
-<!-- <div class="mb-2"><b>Change Password</b></div>
-<div class="row">
-    <div class="col">
-        <div class="form-group">
-            <label>Current Password</label>
-            <input class="form-control" type="password" placeholder="••••••">
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col">
-        <div class="form-group">
-            <label>New Password</label>
-            <input class="form-control" type="password" placeholder="••••••">
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col">
-        <div class="form-group">
-            <label>Confirm <span class="d-none d-xl-inline">Password</span></label>
-            <input class="form-control" type="password" placeholder="••••••"></div>
-    </div>
-</div>
-</div> -->
