--- a/profile.html
+++ b/profile.html
@@ -67,10 +67,6 @@
             <div class="col-md-4">
                 <div class="profile-img">
                     <img src="img/ceciglia_rotta.jpg" alt=""/>
-                    <div class="file btn btn-lg btn-primary">
-                        Cambia foto
-                        <input type="file" name="file"/>
-                    </div>
                 </div>
             </div>
             <div class="col-md-6">
@@ -85,20 +81,74 @@
                         </button>
                         <!-- Modal -->
                         <div class="modal fade modal-only" id="basicExampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
+                            <div class="modal-dialog edit-profile" role="document">
                                 <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
+                                    <div class="modal-header arancio">
+                                        <h5 class="modal-title" id="exampleModalLabel">Modifica profilo</h5>
                                     </div>
                                     <div class="modal-body">
-                                        <p>oh</p>
+                                        <div class="container rounded bg-white mt-5">
+                                            <div class="row">
+                                                <div class="col-md-4 border-right">
+                                                    <div class="profile-img">
+                                                        <img src="img/ceciglia_rotta.jpg" alt=""/>
+                                                        <div class="file btn btn-lg x btn-primary">
+                                                            Cambia foto
+                                                            <input type="file" name="file"/>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-8">
+                                                    <div class="p-3 py-5 no-padding-top form-width">
+                                                        <div class="row mt-2">
+                                                            <div class="col-md-6"><label>Codice Fiscale<input type="text" class="form-control" placeholder="Codice fiscale" value="" readonly></label></div>
+                                                            <div class="col-md-6"><label>E-mail<input type="text" class="form-control" placeholder="E-mail" value=""></label></div>
+                                                        </div>
+                                                        <div class="row mt-3">
+                                                            <div class="col-md-6"><label>Nome<input type="text" class="form-control" placeholder="Nome" value=""></label></div>
+                                                            <div class="col-md-6"><label>Regione<input type="text" class="form-control" placeholder="Regione" value=""></label></div>
+                                                        </div>
+                                                        <div class="row mt-3">
+                                                            <div class="col-md-6"><label>Cognome<input type="text" class="form-control" placeholder="Cognome" value=""></label></div>
+                                                            <div class="col-md-6"><label>Provincia<input type="text" class="form-control" placeholder="Provincia" value=""></label></div>
+                                                        </div>
+                                                        <div class="row mt-3">
+                                                            <div class="col-md-6"><label>Tipo Account<input type="text" class="form-control" placeholder="" value=""></label></div>
+                                                            <div class="col-md-6"><label>Comune<input type="text" class="form-control" placeholder="Comune" value=""></label></div>
+                                                        </div>
+                                                        <br>
+                                                        <div class="mb-2">
+                                                            <b>Change Password</b>
+                                                        </div>
+                                                        <div class="row mt-3">
+                                                            <div class="col-md-6">
+                                                                <label>Current Password
+                                                                    <input class="form-control" type="password" placeholder="••••••">
+                                                                </label>
+                                                            </div>
+                                                        </div>
+                                                        <div class="row mt-3">
+                                                            <div class="col-md-6">
+                                                                <label>New Password
+                                                                    <input class="form-control" type="password" placeholder="••••••">
+                                                                </label>
+                                                            </div>
+                                                        </div>
+                                                        <div class="row mt-3">
+                                                            <div class="col-md-6">
+                                                                <label>Confirm <span class="d-none d-xl-inline">Password</span>
+                                                                    <input class="form-control" type="password" placeholder="••••••">
+                                                                </label>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary orange-btn">Save changes</button>
+                                        <button type="button" class="btn btn-secondary btn-outline-danger" data-dismiss="modal">Annulla</button>
+                                        <button type="button" class="btn btn-primary btn-outline-success">Save changes</button>
                                     </div>
                                 </div>
                             </div>
